kubernetes/management/argocd/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.kalexlab.xyz`)
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-ingress-certificate-secret
